--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -7,10 +7,13 @@ pipeline {
         sh 'java -version'
       }
     }
-    stage('Deploy') {
+        stage('Deploy') {
       when {
         beforeAgent true
         branch 'master'
+      }
+      options {
+        timeout(time: 30, unit: 'SECONDS') 
       }
       input {
         message "Should we continue?"
